--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -9,7 +9,7 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+
             <!-- Colours -->
             <Color x:Key="Shadow">Grey</Color>
             <Color x:Key="Background">#f7f7f7</Color>
@@ -20,8 +20,8 @@
                 <Setter Property="WidthRequest" Value="100" />
                 <Setter Property="Aspect" Value="AspectFill" />
             </Style>
-            
-            <Style x:Key="TitleLabel" TargetType="Label">
+
+            <Style x:Key="CardTitle" TargetType="Label">
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
@@ -43,7 +43,7 @@
                 <Setter Property="Background" Value="white" />
                 <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
                 <Setter Property="StrokeThickness" Value="0"/>
-                <Setter Property="Padding" Value="0"/>
+                <Setter Property="Padding" Value="0,0,10,0"/>
                 <Setter Property="Margin" Value="10"/>
                 <!--<Setter Property="Shadow" Value="{StaticResource CommonShadow}"/>-->
             </Style>
