Detail page added

--- a/smilecook/Views/MainPage.xaml
+++ b/smilecook/Views/MainPage.xaml
@@ -26,6 +26,12 @@
                     <DataTemplate x:DataType="model:RecipeDetails">
 
                         <Border Style="{StaticResource RecipeCard}">
+
+                            <Border.GestureRecognizers>
+                                <TapGestureRecognizer CommandParameter="{Binding .}"
+                                                      Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=GoToRecipeDetailCommand}"/>
+                            </Border.GestureRecognizers>
+                            
                             <Grid ColumnDefinitions="Auto, *"
                               RowDefinitions="*" 
                               ColumnSpacing="10">
