Recipe Detail Viewmodel added

--- a/smilecook/Views/MainPage.xaml
+++ b/smilecook/Views/MainPage.xaml
@@ -18,7 +18,7 @@
                      CommandParameter="{Binding Text, Source={x:Reference searchBar}}"
                      IsRefreshing="{Binding IsRefreshing}">
 
-            <CollectionView ItemsSource="{Binding RecipesCol}"
+            <CollectionView ItemsSource="{Binding Recipes}"
                         SelectionMode="None"
                         Style="{StaticResource MainLayout}">
 
