--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -2,10 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="smilecook.Views.RecipeDetailPage"
-             Title="RecipeDetailPage">
+             xmlns:viewmodel="clr-namespace:smilecook.ViewModels"
+             x:DataType="viewmodel:RecipeDetailViewModel"
+             Title="{Binding Title}">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="{Binding Recipe.Label}"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
