--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -21,7 +21,7 @@
                         Grid.Column="1">
                     <VerticalStackLayout>
                         <Label Text="{Binding Recipe.Label}" Style="{StaticResource RecipeTitle}"/>
-                        <Grid ColumnDefinitions="Auto, Auto, Auto" HorizontalOptions="Center">
+                        <Grid ColumnDefinitions="Auto, Auto, Auto" HorizontalOptions="Center" ColumnSpacing="15" Padding="10,0,10,0">
                             <HorizontalStackLayout Grid.Column="0" Style="{StaticResource IconLabelContainer}">
                                 <Image Source="clock.png" Style="{StaticResource Icon}"/>
                                 <Label Text="{Binding Recipe.TotalTime, StringFormat='{0} min'}" Style="{StaticResource IconLabel}"/>
@@ -60,6 +60,7 @@
                 </CollectionView>
             </VerticalStackLayout>
 
+
             <CollectionView ItemsSource="{Binding Recipe.DietLabels}"
                                 SelectionMode="None"
                                 ItemsLayout="HorizontalList">
@@ -82,11 +83,11 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
 
-                        <HorizontalStackLayout>
+                        <StackLayout>
                             <Border Style="{StaticResource LabelTag}">
                                 <Label Text="{Binding .}" />
                             </Border>
-                        </HorizontalStackLayout>
+                        </StackLayout>
 
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
@@ -109,25 +110,37 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-            <CollectionView ItemsSource="{Binding Recipe.CuisineType}"
+            <VerticalStackLayout Style="{StaticResource ListLayout}">
+                <Label Text="Cuisine" Style="{StaticResource CardTitle}"/>
+
+                <CollectionView ItemsSource="{Binding Recipe.CuisineType}"
                             SelectionMode="None"
                             ItemsLayout="HorizontalList">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-
-                        <HorizontalStackLayout>
-                            <Border Style="{StaticResource LabelTag}">
-                                <Label Text="{Binding .}" />
-                            </Border>
-                        </HorizontalStackLayout>
-
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
 
 
+                            <HorizontalStackLayout Grid.Column="2" Style="{StaticResource IconLabelContainer}">
+                                <Image Source="world.png" Style="{StaticResource Icon}"/>
+                                <Label Text="{Binding .}" Style="{StaticResource IconLabel}"/>
+                            </HorizontalStackLayout>
 
-            <Button Text="More" Command="{Binding GoToLinkCommand}" CommandParameter="{Binding Recipe.Url}"/>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </VerticalStackLayout>
+
+
+
+
+
+            <Button Text="Instructions" 
+                    ImageSource="open_in_new_1.png" 
+                    ContentLayout="Right, 20" 
+                    Style="{StaticResource Link}"
+                    Command="{Binding GoToLinkCommand}" 
+                    CommandParameter="{Binding Recipe.Url}">
+            </Button>
 
 
         </VerticalStackLayout>
