--- a/smilecook/AppShell.xaml
+++ b/smilecook/AppShell.xaml
@@ -11,4 +11,9 @@
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
+
+    <Shell.TitleView>
+        <Image Source="logo.svg" Style="{StaticResource Logo}"/>
+    </Shell.TitleView>
+
 </Shell>
