--- a/smilecook/Views/MainPage.xaml
+++ b/smilecook/Views/MainPage.xaml
@@ -13,12 +13,15 @@
     </Page.Behaviors>
 
     <StackLayout>
-        <SearchBar Placeholder="Search recipes..."
+        <HorizontalStackLayout>
+            <SearchBar Placeholder="Search recipes..."
                    x:Name="searchBar"
                    SearchCommand="{Binding SearchRecipesCommand}"
                    SearchCommandParameter="{Binding Text, Source={x:Reference searchBar}}" 
                    Style="{StaticResource SearchField}" />
-
+            <Button Text="Filters" Command="{Binding GoToFiltersCommand}"/>
+        </HorizontalStackLayout>
+        
         <RefreshView Command="{Binding SearchRecipesCommand}"
                      CommandParameter="{Binding Text, Source={x:Reference searchBar}}"
                      IsRefreshing="{Binding IsRefreshing}">
