Added filter functionality to Recipe service

--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -39,6 +39,12 @@
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
             </Style>
+
+            <Style x:Key="Title" TargetType="Label">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="10"/>
+            </Style>
             
             <Style x:Key="CheckboxLabel" TargetType="Label">
                 <Setter Property="VerticalOptions" Value="Center"/>
